[project]
name = "aima"
version = "0.1.0"
description = "Multi-agent marketing automation system built with LangGraph"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1,<2.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-community>=1.0,<2.0",
    "langchain-ollama>=1.0,<2.0",
    "duckduckgo-search>=7.0,<8.0",
    "pydantic-settings>=2.13,<3.0",
    "typer>=0.15,<1.0",
    "rich>=13.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.0",
]
openai = ["langchain-openai>=1.0,<2.0"]
anthropic = ["langchain-anthropic>=1.0,<2.0"]

[project.scripts]
aima = "aima.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
